# seer

./: .env.example  .gitignore  README.md  docker-compose.yml
tiresias-api/: .env.example  Dockerfile  alembic.ini  pyproject.toml
tiresias-api/alembic/: env.py
tiresias-api/src/: config.py  main.py
tiresias-api/src/api/: deps.py
tiresias-api/src/api/v1/: community.py  models.py  router.py  users.py  videos.py  voices.py
tiresias-api/src/core/: database.py  dependencies.py  exceptions.py  settings.py
tiresias-api/src/models/: __init__.py  description.py  feedback.py  user.py  video.py
tiresias-api/src/schemas/: description.py  response.py  user.py  video.py
tiresias-api/src/services/audio/: dialogue_detector.py  diarization.py  gap_analyzer.py  mixer.py  transcription.py
tiresias-api/src/services/community/: quality_system.py  review_system.py
tiresias-api/src/services/description/: generator.py  narrative_analyzer.py  optimizer.py
tiresias-api/src/services/llm/: claude_provider.py  gemini_provider.py  openai_provider.py  provider_base.py
tiresias-api/src/services/tts/: elevenlabs_tts.py  polly_tts.py  voice_manager.py
tiresias-api/src/services/user/: preference_engine.py
tiresias-api/src/tasks/: celery_app.py  cleanup.py  video_processing.py
tiresias-api/src/utils/: helpers.py  logger.py  validators.py
tiresias-api/tests/: conftest.py
tiresias-api/tests/test_api/: test_health.py  test_models.py  test_videos.py  test_voices.py
tiresias-api/tests/test_services/: test_gap_analyzer.py  test_optimizer.py  test_validators.py
(+39 files in other folders)
